# tauri

./: .gitignore  Makefile  README.md  package-lock.json  package.json
lisa/: package-lock.json  package.json
lisa/src-tauri/: Cargo.toml
lisa/src-tauri/src/: main.rs
lisa/src/routes/: +page.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: controllers.rs  lib.rs  macros.rs
src-tauri/src/controllers/: microphone.rs  mod.rs
src-tauri/src/models/: audio_devices.rs  errors.rs  microphone.rs  mod.rs  settings.rs  state.rs  websocket_sender.rs
src/components/: AudioVisualiser.svelte
src/routes/: +page.svelte
tauri-plugin-microphone/: Cargo.toml  README.md  package.json
tauri-plugin-microphone/android/: .gitignore  build.gradle.kts
tauri-plugin-microphone/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-microphone/android/src/main/java/: Example.kt  ExamplePlugin.kt
tauri-plugin-microphone/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-microphone/examples/tauri-app/: package.json
tauri-plugin-microphone/examples/tauri-app/src/: App.svelte
tauri-plugin-microphone/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-microphone/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-microphone/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-microphone/guest-js/: index.ts
tauri-plugin-microphone/ios/: Package.swift  README.md
tauri-plugin-microphone/ios/Sources/: ExamplePlugin.swift
tauri-plugin-microphone/permissions/autogenerated/: reference.md
tauri-plugin-microphone/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
tests/: android.test.cjs  ios.test.cjs
