[package]
name = "lisa"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lisa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-microphone = { path = "../tauri-plugin-microphone"}

serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam = "0.8.4"
cpal = { version = "0.15.3", features = ["oboe-shared-stdcxx"] }
log = "0.4.22"
anyhow = "1.0.89"
tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
rubato = "=0.8.1"
